added draggable grid
finally

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,8 +1,11 @@
-@import "library.less";
+@import "classes";
+@import "library";
+@import "canvas";
 
 html {
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 }
 
 body {
