--- a/src/less/library.less
+++ b/src/less/library.less
@@ -4,18 +4,27 @@
     bottom: 0px;
     left: 0px;
     width: 200px;
+    background-color: rgb(255,255,255);
+    box-shadow: 1px 0px 10px black;
 
     .actions {
 
     	button {
-		    margin: 4px;
+			margin: 0px;
 		    width: 25px;
 		    height: 25px;
 		    padding: 0px;
 		    text-align: center;
 		    outline: none;
 		    border: none;
-		    border-radius: 4px;
+		    border-radius: 0px;
+		    font-size: 20px;
+
+		    transition: all 0.2s ease-in-out;
+
+		    &:hover {
+		    	outline: solid 1px black;
+		    }
 		}
 
 		.btn-add {
@@ -24,6 +33,8 @@
 	}
 
 	.object-tree {
+		.no-select();
+		
 		.object {
 			padding: 4px;
 			cursor: default;
