--- a/src/less/library.less
+++ b/src/less/library.less
@@ -10,25 +10,11 @@
     .actions {
 
     	button {
-			margin: 0px;
-		    width: 25px;
-		    height: 25px;
-		    padding: 0px;
-		    text-align: center;
-		    outline: none;
-		    border: none;
-		    border-radius: 0px;
-		    font-size: 20px;
-
-		    transition: all 0.2s ease-in-out;
-
-		    &:hover {
-		    	outline: solid 1px black;
-		    }
+    		.ui-button();
 		}
 
-		.btn-add {
-
+		.btn-add:hover {
+			background-color: #E5E5E5;
 		}
 	}
 
