--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,3 +1,4 @@
+@import "titlebar";
 @import "classes";
 @import "library";
 @import "canvas";
@@ -10,4 +11,7 @@ html {
 
 body {
 	margin: 0px;
+	width: 100%;
+	height: 100%;
 }
+
