--- a/src/less/main.less
+++ b/src/less/main.less
@@ -3,6 +3,15 @@
 @import "library";
 @import "canvas";
 
+@font-face {
+    font-family: "Inconsolata";
+    src: url("includes/fonts/inconsolata/inconsolata.otf") format("opentype");
+}
+
+*{
+    font-family: 'Inconsolata', sans-serif;
+}
+
 html {
 	width: 100%;
 	height: 100%;
