hovering image shows preview, module less files

--- a/src/less/library.less
+++ b/src/less/library.less
@@ -8,6 +8,7 @@
     box-shadow: 1px 0px 5px black;
 
     .actions {
+    	z-index: @library-z-front;
 
     	button {
     		.ui-button();
@@ -20,6 +21,11 @@
 
 	.object-tree {
 		.no-select();
+
+		position: absolute;
+		left: 0px;
+		right: 0px;
+		z-index: @library-z-front;
 		
 		.object {
 			padding: 4px;
