--- a/src/main.css
+++ b/src/main.css
@@ -122,6 +122,9 @@
   background-color: #ffffff;
   box-shadow: 1px 0px 5px black;
 }
+.library .actions {
+  z-index: 10;
+}
 .library .actions button {
   height: 30px;
   width: 30px;
@@ -156,6 +159,10 @@
   user-select: none;
   /* Non-prefixed version, currently
     not supported by any browser */
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  z-index: 10;
 }
 .library .object-tree .object {
   padding: 4px;
