spritesheet image selection

--- a/src/less/classes.less
+++ b/src/less/classes.less
@@ -17,7 +17,8 @@
 }
 
 .ui-btn-group {
-    background-color: rgba(0,0,0,.03);
+    cursor: default;
+    background-color: rgba(255, 255, 255, 0.6);
     border-radius: 4px;
 }
 
@@ -39,4 +40,10 @@
     	border-radius: 100%;
     	background-color: #E5E5E5;
     }
+}
+
+.ui-select {
+    padding: 5px;
+    border-radius: 5px;
+    outline: none;
 }
