--- a/src/modules/image/less/main.less
+++ b/src/modules/image/less/main.less
@@ -1,9 +1,9 @@
-@import "variables";
+@import "imports";
 
 .library {
 	.img-hover {
 		position: absolute;
-		top: 0px;
+		bottom: 0px;
 	    max-width: 100%;
 	    opacity: 0.2;
 	    z-index: @library-z-middle;
