--- a/src/less/canvas.less
+++ b/src/less/canvas.less
@@ -1,9 +1,6 @@
-#main_canvas {
-	position: absolute;
-    top: 0px;
-    right: 0px;
-    left: 0px;
-    bottom: 0px;
+#main-canvas {
+	width: 100%;
+	height: 100%;
 
     cursor: default;
 }
