--- a/src/main.css
+++ b/src/main.css
@@ -39,11 +39,20 @@
 }
 .ui-button:hover {
   border-radius: 100%;
-  background-color: #E5E5E5;
+  background-color: #BDBDBD;
 }
 .ui-select {
   padding: 5px;
   border-radius: 5px;
+  outline: none;
+}
+.ui-input-group input {
+  border: 20px solid transparent;
+  border-image: linear-gradient(to right, black 0%, transparent 90%, transparent 100%);
+  border-image-slice: 1;
+  border-width: 0px;
+  padding: 3px;
+  border-bottom-width: 1px;
   outline: none;
 }
 @font-face {
@@ -96,7 +105,7 @@
 }
 .titlebar .actionbuttons button:hover {
   border-radius: 100%;
-  background-color: #E5E5E5;
+  background-color: #BDBDBD;
 }
 .titlebar .titlebuttons {
   -webkit-app-region: no-drag;
@@ -121,7 +130,7 @@
 }
 .titlebar .titlebuttons button:hover {
   border-radius: 100%;
-  background-color: #E5E5E5;
+  background-color: #BDBDBD;
 }
 .titlebar .titlebuttons button:hover.btn-close {
   background-color: #E81123;
@@ -156,7 +165,7 @@
 }
 .library .actions button:hover {
   border-radius: 100%;
-  background-color: #E5E5E5;
+  background-color: #BDBDBD;
 }
 .library .actions .btn-add:hover {
   background-color: #E5E5E5;
