--- a/src/modules/spritesheet/less/main.less
+++ b/src/modules/spritesheet/less/main.less
@@ -1,5 +1,6 @@
 @import "imports";
 
+/*
 #main-canvas.spritesheet {
 	display: inline-block;
 	width: 50%;
@@ -14,4 +15,58 @@
     height: 100%;
     margin-top: 46px;
     padding: 10px;
+}
+*/
+.workspace {
+    .preview-container {
+        .no-select();
+
+        height: 50%;
+        margin-top: 46px;
+        padding: 0px 10px;
+
+        >* {
+            display: inline-block;
+            vertical-align: top;
+            height: 100%;
+            width: 50% !important;
+            overflow: auto;
+        }
+
+        .img-preview-container {
+            position: relative;
+        }
+
+        .frame-box-container {
+            outline: 1px solid gray;
+            position: absolute;
+            top: 1px;
+            left: 1px;
+            font-size: 0;
+
+            z-index: 20;
+
+            .frame-box {
+                display: inline-block;
+                outline: solid 1px red;
+                width: 1px;
+                height: 1px;
+            }
+        }
+    }
+
+    .inputs-section {
+        display: inline-block;
+        width: 100%;
+        padding: 10px;
+
+        .ui-input-group {
+            margin: 10px 0px;
+
+            input {
+                margin-left: 10px;
+                min-width: 50px;
+            }
+        }
+    }
 }
