--- a/src/less/titlebar.less
+++ b/src/less/titlebar.less
@@ -1,14 +1,30 @@
+body{
+    &[project-open="0"] {
+        .titlebar {
+            left: 0px;
+        }
+    }
+
+    &[project-open="1"] {
+        .titlebar {
+            left: 200px;
+        }
+    }
+}
+
 .titlebar {
 	.win-drag();
     .no-select();
 
     position: absolute;
     top: 0px;
-    left: 200px;
     right: 0px;
     height: auto;
     padding: 5px;
-    //background-color: rgba(0,0,0,0.03);
+    margin: 1px;
+    z-index: @ide-z-front;
+    
+    transition: all ease-in-out 0.2s;
 
     .actionbuttons {
         .win-nodrag();
