--- a/src/modules/spritesheet/less/main.less
+++ b/src/modules/spritesheet/less/main.less
@@ -17,7 +17,7 @@
     padding: 10px;
 }
 */
-.workspace {
+.workspace.spritesheet {
     .preview-container {
         .no-select();
 
@@ -65,7 +65,7 @@
 
             input {
                 margin-left: 10px;
-                min-width: 50px;
+                width: 60px;
             }
         }
     }
