--- a/src/less/library.less
+++ b/src/less/library.less
@@ -23,7 +23,7 @@ body{
     left: 0px;
     background-color: rgb(255,255,255);
     box-shadow: 1px 0px 5px black;
-    z-index: @ide-z-middle;
+    z-index: @ide-z-front;
 
     transition: all ease-in-out 0.2s;
 
