--- a/src/main.css
+++ b/src/main.css
@@ -39,7 +39,7 @@
 }
 .ui-button:hover {
   border-radius: 100%;
-  background-color: #BDBDBD;
+  background-color: #e0e0e0;
 }
 .ui-select {
   padding: 5px;
@@ -96,7 +96,6 @@ body[project-open="1"] .titlebar {
   -webkit-app-region: no-drag;
   white-space: nowrap;
   display: inline-block;
-  margin-left: 5px;
 }
 .titlebar .actionbuttons button {
   height: 30px;
@@ -113,7 +112,7 @@ body[project-open="1"] .titlebar {
 }
 .titlebar .actionbuttons button:hover {
   border-radius: 100%;
-  background-color: #BDBDBD;
+  background-color: #e0e0e0;
 }
 .titlebar .titlebuttons {
   -webkit-app-region: no-drag;
@@ -138,7 +137,7 @@ body[project-open="1"] .titlebar {
 }
 .titlebar .titlebuttons button:hover {
   border-radius: 100%;
-  background-color: #BDBDBD;
+  background-color: #e0e0e0;
 }
 .titlebar .titlebuttons button:hover.btn-close {
   background-color: #E81123;
@@ -159,7 +158,7 @@ body[project-open="1"] .library {
   left: 0px;
   background-color: #ffffff;
   box-shadow: 1px 0px 5px black;
-  z-index: 0;
+  z-index: 20;
   transition: all ease-in-out 0.2s;
 }
 .library .actions {
@@ -182,7 +181,7 @@ body[project-open="1"] .library {
 }
 .library .actions button:hover {
   border-radius: 100%;
-  background-color: #BDBDBD;
+  background-color: #e0e0e0;
 }
 .library .actions .btn-add:hover {
   background-color: #E5E5E5;
