--- a/src/less/library.less
+++ b/src/less/library.less
@@ -48,7 +48,10 @@ body{
 		left: 0px;
 		right: 0px;
 		z-index: @library-z-front;
-		
+		height: 30px;
+		box-sizing: border-box;
+		line-height: 20px;
+
 		.object {
 			padding: 4px;
 			cursor: default;
@@ -57,6 +60,15 @@ body{
 
 			&:hover {
 				background-color: #e0e0e0;
+			}
+
+			input {
+				.ui-input();
+
+				background: transparent;
+				outline: none;
+				font-size: 16px;
+				padding: 0px;
 			}
 		}
 	}
