--- a/src/less/classes.less
+++ b/src/less/classes.less
@@ -49,6 +49,8 @@
 }
 
 .ui-input {
+    .win-nodrag();
+
     border: 20px solid transparent;
     border-image: linear-gradient(to right, black 0%, transparent 90%, transparent 100%);
     border-image-slice: 1;
@@ -56,6 +58,58 @@
     padding: 3px;
     border-bottom-width: 1px;
     outline: none; 
+}
+.ui-checkbox {
+    .win-nodrag();
+
+    width: 30px;
+    height: 30px;
+    margin: 3px;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+
+    input {
+        height: 100%;
+        width: 100%;
+        margin: 0px;
+        opacity: 0;
+
+        &:not(:checked) + .mdi {
+            border-color: transparent;
+            border-style: dashed;
+        }
+
+        &:checked + .mdi {
+            border-radius: 100%;
+            border-color: black;
+            border-style: solid;
+        }
+    }
+
+    .mdi {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        pointer-events: none;
+        border: 1px solid black;
+        border-radius: 2px;
+        margin: 0px;
+        width: 30px;
+        height: 30px;
+        padding: 6px;
+        background-color: transparent;
+        box-sizing: border-box;
+        
+        transition: all ease-in-out 0.2s;
+    }
+
+    &:hover {
+        .mdi {
+            border-radius: 100%;
+            background-color: #e0e0e0;
+        }
+    }
 }
 
 .ui-input-group {
