--- a/src/less/library.less
+++ b/src/less/library.less
@@ -29,6 +29,8 @@ body{
 
     .actions {
     	.win-drag();
+    	.no-select();
+    	
     	z-index: @library-z-front;
 
     	button {
@@ -48,18 +50,35 @@ body{
 		left: 0px;
 		right: 0px;
 		z-index: @library-z-front;
-		height: 30px;
+		//height: 100%;
 		box-sizing: border-box;
 		line-height: 20px;
 
-		.object {
-			padding: 4px;
+		&.can-delete {
+			.children {
+				margin-left: 0px !important;
+			}
+		}
+
+		.children {
+			padding: 1px;
+		}
+
+		>.name {
+			//height: 100%;
+		}
+
+		.folder,.object{
+			position: relative;
 			cursor: default;
+			outline: 1.5px dashed;
+			outline-color: transparent;
 
-			transition: ease-in-out 0.1s background-color;
+			transition: background-color ease-in-out 0.1s;
+			transition: outline-color ease-in-out 0.5s;
 
-			&:hover {
-				background-color: #e0e0e0;
+			&.dragover {
+				outline-color: @ide-fave-color-400;
 			}
 
 			input {
@@ -70,6 +89,63 @@ body{
 				font-size: 16px;
 				padding: 0px;
 			}
+
+			.name {
+				padding: 4px;
+
+				&:hover {
+					background-color: #e0e0e0;
+				}
+			}
+
+			&.can-delete {
+				margin-left: 25px;
+			}
+
+			.btn-delete-obj {
+    			.ui-button();
+
+    			position: absolute;
+    			top: 0px;
+    			left: -25px;
+
+    			width: 25px;
+    			height: 28px;
+    			margin: 0px;
+
+				transition: ease-in-out 0.1s background-color;
+
+    			&:hover {
+    				background-color: #f44336;
+    				color: white;
+    				border-radius: 0px;
+    			}
+			}
 		}
+
+		.folder {
+			> .children {
+				overflow-y: hidden;
+				margin-left: 15px;
+				transition: ease-in-out 0.05s all;
+			}
+
+			&.expanded > .name {
+				font-style: italic;
+			}
+
+			&.expanded > .children{
+				max-height: 1800px;
+				opacity: 1;
+			}
+
+			&:not(.expanded) > .children{
+				max-height: 0;
+				height: auto;
+
+				margin-left: 0px;
+				opacity: 0;
+			}
+		}	
 	}
 }
