added tiles to library

--- a/src/less/library.less
+++ b/src/less/library.less
@@ -81,6 +81,12 @@ body{
 				outline-color: @ide-fave-color-400;
 			}
 
+			&.selected {
+				>.name {
+					font-weight: 900;
+				}
+			}
+
 			input {
 				.ui-input();
 
