--- a/src/modules/tile/less/main.less
+++ b/src/modules/tile/less/main.less
@@ -1,6 +1,6 @@
 @import "imports";
 
-.workspace.tiles {
+.workspace.tile {
     .preview-container {
         .no-select();
 
@@ -12,7 +12,7 @@
             display: inline-block;
             vertical-align: top;
             height: 100%;
-            width: 50% !important;
+            width: 100% !important;
             overflow: auto;
         }
 
