--- a/src/modules/image/less/main.less
+++ b/src/modules/image/less/main.less
@@ -7,5 +7,8 @@
 	    max-width: 100%;
 	    opacity: 0.2;
 	    z-index: @library-z-middle;
+	    margin-bottom: 17px;
+	    margin-left: 1px;
+	    border: 1px solid @ide-fave-color-400;
 	}
 }
