tile placing works. camera/snapping needs work.

--- a/src/modules/scene/less/main.less
+++ b/src/modules/scene/less/main.less
@@ -1,12 +1,11 @@
 @import "imports";
 
 .tile-selector {
-	.tile-selector {
-		overflow: auto;
-	}
+	padding: 1px;
+	overflow: auto;
 	
 	img {
-		border: 1px solid @ide-fave-color-400;
+		outline: 1px solid @ide-fave-color-400;
 	}
 
 	.frame-container {
