--- a/src/modules/tile/less/main.less
+++ b/src/modules/tile/less/main.less
@@ -18,6 +18,11 @@
 
         .img-preview-container {
             position: relative;
+
+            > img {
+                margin-left: 1px;
+                margin-top: 1px;
+            }
         }
 
         .frame-box-container {
