working on build/run

--- a/src/less/titlebar.less
+++ b/src/less/titlebar.less
@@ -37,6 +37,17 @@ body{
         }
     }
 
+    .gamebuttons {
+        .win-nodrag();
+
+        display: inline-block;
+        margin-left: 20px;
+
+        button {
+            .ui-button();
+        }
+    }
+
     .titlebuttons {
     	.win-nodrag();
 
