--- a/src/modules/scene/less/main.less
+++ b/src/modules/scene/less/main.less
@@ -40,6 +40,18 @@
 	    box-sizing: border-box;
 	    pointer-events: none;
 
+	    > .zoom {
+	    	text-align: center;
+	    	margin: 0px 5px;
+	    	display: inline-block;
+	    	vertical-align: middle;
+	    	height: 100%;
+
+	    	.amount {
+	    		display: inline-block;
+	    	}
+	    }
+
 	    > .mouse-coords {
 	    	min-width: 100px;
 	    }
