--- a/src/modules/state/less/main.less
+++ b/src/modules/state/less/main.less
@@ -3,7 +3,7 @@
 @import (inline) "./../node_modules/codemirror/lib/codemirror.css";
 @import (inline) "./../node_modules/codemirror/theme/monokai.css";
 
-.workspace.entity {
+.workspace.state {
 	#code {
 	    width: 100%;
 	    height: 100%;
@@ -11,13 +11,13 @@
 	    
 	    font-family: initial !important;
 	    box-sizing: border-box;
-	    
+
 		.CodeMirror {
 			width: 100%;
 			height: 100%;
 
 			.CodeMirror-scroll {
-				padding: 40px;
+
 			}
 		}
 	}
