--- a/src/main.css
+++ b/src/main.css
@@ -34,11 +34,23 @@
   outline: none;
   background-color: transparent;
   font-size: 15px;
-  cursor: default;
+  cursor: pointer;
   transition: all ease-in-out 0.4s;
 }
 .ui-button:hover {
   border-radius: 100%;
+  background-color: #e0e0e0;
+}
+.ui-text-button {
+  background-color: white;
+  border: none;
+  outline: none;
+  border-radius: 2px;
+  cursor: pointer;
+  transition: all ease-in-out 0.4s;
+}
+.ui-text-button:hover {
+  border-radius: 4px;
   background-color: #e0e0e0;
 }
 .ui-select {
@@ -58,27 +70,35 @@
 }
 .ui-checkbox {
   -webkit-app-region: no-drag;
-  width: 30px;
   height: 30px;
   margin: 3px;
   display: inline-block;
   vertical-align: top;
   position: relative;
 }
+.ui-checkbox label {
+  margin-left: 40px;
+  vertical-align: top;
+  line-height: 30px;
+}
 .ui-checkbox input {
   height: 100%;
   width: 100%;
   margin: 0px;
   opacity: 0;
+  border-style: solid;
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
 .ui-checkbox input:not(:checked) + .mdi {
-  border-color: transparent;
+  border-color: rgba(0, 0, 0, 0.2);
   border-style: dashed;
 }
 .ui-checkbox input:checked + .mdi {
-  border-radius: 100%;
   border-color: black;
   border-style: solid;
+  background-color: #e0e0e0;
 }
 .ui-checkbox .mdi {
   position: absolute;
@@ -96,7 +116,6 @@
   transition: all ease-in-out 0.2s;
 }
 .ui-checkbox:hover .mdi {
-  border-radius: 100%;
   background-color: #e0e0e0;
 }
 .ui-input-group input {
@@ -161,7 +180,7 @@ body[project-open="1"] .titlebar {
   outline: none;
   background-color: transparent;
   font-size: 15px;
-  cursor: default;
+  cursor: pointer;
   transition: all ease-in-out 0.4s;
 }
 .titlebar .actionbuttons button:hover {
@@ -183,7 +202,7 @@ body[project-open="1"] .titlebar {
   outline: none;
   background-color: transparent;
   font-size: 15px;
-  cursor: default;
+  cursor: pointer;
   transition: all ease-in-out 0.4s;
 }
 .titlebar .gamebuttons button:hover {
@@ -207,7 +226,7 @@ body[project-open="1"] .titlebar {
   outline: none;
   background-color: transparent;
   font-size: 15px;
-  cursor: default;
+  cursor: pointer;
   transition: all ease-in-out 0.4s;
   vertical-align: top;
 }
@@ -266,7 +285,7 @@ body[project-open="1"] .library {
   outline: none;
   background-color: transparent;
   font-size: 15px;
-  cursor: default;
+  cursor: pointer;
   transition: all ease-in-out 0.4s;
   -webkit-app-region: no-drag;
 }
@@ -364,7 +383,7 @@ body[project-open="1"] .library {
   outline: none;
   background-color: transparent;
   font-size: 15px;
-  cursor: default;
+  cursor: pointer;
   transition: all ease-in-out 0.4s;
   position: absolute;
   top: 0px;
@@ -407,6 +426,64 @@ body[project-open="1"] .library {
   width: 100%;
   height: 100%;
   cursor: default;
+}
+.ui-settings {
+  position: absolute;
+  top: 45px;
+  bottom: 0px;
+  left: 200px;
+  right: 0px;
+  outline: 1px solid black;
+  z-index: 19;
+  background: #FFFFFF;
+}
+.ui-settings .categories {
+  position: relative;
+  display: inline-block;
+  height: 100%;
+  vertical-align: top;
+  text-align: center;
+}
+.ui-settings .categories .category {
+  background-color: white;
+  border: none;
+  outline: none;
+  border-radius: 2px;
+  cursor: pointer;
+  transition: all ease-in-out 0.4s;
+  font-size: 18px;
+  width: 100%;
+  height: 36px;
+}
+.ui-settings .categories .category:hover {
+  border-radius: 4px;
+  background-color: #e0e0e0;
+}
+.ui-settings .categories .btn-close {
+  background-color: white;
+  border: none;
+  outline: none;
+  border-radius: 2px;
+  cursor: pointer;
+  transition: all ease-in-out 0.4s;
+  position: absolute;
+  bottom: 0px;
+  width: 80px;
+  height: 40px;
+  left: 0;
+  right: 0;
+  margin: 10px auto;
+}
+.ui-settings .categories .btn-close:hover {
+  border-radius: 4px;
+  background-color: #e0e0e0;
+}
+.ui-settings .inputs-container {
+  display: inline-block;
+}
+.ui-settings .inputs-container .subcategory {
+  font-size: 20px;
+  margin: 10px;
 }
 html {
   width: 100%;
