settings functional, autosave timeout

--- a/src/less/classes.less
+++ b/src/less/classes.less
@@ -136,7 +136,15 @@
 }
 
 .ui-input-group {
+    label {
+        margin-right: 20px;
+    }
+
     input {
         .ui-input();
+    }
+
+    .ui-input {
+        margin: 5px;
     }
 }
