--- a/src/less/titlebar.less
+++ b/src/less/titlebar.less
@@ -20,7 +20,7 @@ body{
     top: 0px;
     right: 0px;
     height: auto;
-    padding: 5px;
+    padding: 3px 5px;
     margin: 1px;
     z-index: @ide-z-front;
     
@@ -53,7 +53,7 @@ body{
 
         white-space: nowrap;
     	position: absolute;
-    	top: 5px;
+    	top: 3px;
     	right: 5px;
 
     	button {
