--- a/src/less/ui.less
+++ b/src/less/ui.less
@@ -6,7 +6,7 @@
     bottom: 0px;
     left: 200px;
     right: 0px;
-    outline: 1px solid black;
+    outline: 1px solid rgba(0,0,0,0.25);
     z-index: @ide-z-front - 1;
     background: @ide-background;
 
@@ -46,5 +46,8 @@
 		    font-size: 20px;
 			margin: 10px;
     	}
+  		>div {
+  			margin: 4px 25px;
+  		}
     }
 }
