console, building for windows/mac/linux

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -9,3 +9,7 @@
 @library-z-front: 10;
 @library-z-middle: 0;
 @library-z-back: -10;
+
+@text-highlight-red: #ffcdd2;
+@text-highlight-green: #c5e1a5;
+@text-highlight-amber: #ffe082;
